add patch documentation
